==> KwintenSchram/Ambient/stm32/NFCNEWSTM/src/PN532.c <==
#include "PN532.h"

uint8_t mifareclassic_WriteDataBlock (uint8_t blockNumber, uint8_t * data)
{
	 /* Prepare the first command */
	 pn532_packetbuffer[0] = PN532_COMMAND_INDATAEXCHANGE;
	 pn532_packetbuffer[1] = 1;                      /* Card number */
	 pn532_packetbuffer[2] = MIFARE_CMD_WRITE;       /* Mifare Write command = 0xA0 */
	 pn532_packetbuffer[3] = blockNumber;            /* Block Number (0..63 for 1K, 0..255 for 4K) */
	 memcpy (pn532_packetbuffer+4, data, 16);          /* Data Payload */

	 /* Send the command */
	 if (! sendCommandCheckAck(pn532_packetbuffer, 20,1000))
	 {
	   return 0;//Failed to receive ACK for write command
	 }
	HAL_Delay(10);
	 /* Read the response packet */
	 readdata(pn532_packetbuffer, 26);

	 return 1;
}

uint8_t mifareultralight_WritePage (uint8_t page, uint8_t * data)
{
	if (page >= 64)
	{
		return 0; //Page value out of range
	}

	/* Prepare the first command */
	pn532_packetbuffer[0] = PN532_COMMAND_INDATAEXCHANGE;
	pn532_packetbuffer[1] = 1;                      /* Card number */
	pn532_packetbuffer[2] = MIFARE_ULTRALIGHT_CMD_WRITE;       /* Mifare Ultralight Write command = 0xA2 */
	pn532_packetbuffer[3] = page;            /* Page Number (0..63 for most cases) */
	memcpy (pn532_packetbuffer+4, data, 4);          /* Data Payload */

	/* Send the command */
	if (! sendCommandCheckAck(pn532_packetbuffer, 8,1000))
	{
		return 0;//Failed to receive ACK for write command
	}
	HAL_Delay(10);
	/* Read the response packet */
	readdata(pn532_packetbuffer, 26);

	// Return OK Signal
	return 1;
}

uint8_t ntag2xx_WritePage (uint8_t page, uint8_t * data)
{
	// TAG Type       PAGES   USER START    USER STOP
	// --------       -----   ----------    ---------
	// NTAG 203       42      4             39
	// NTAG 213       45      4             39
	// NTAG 215       135     4             129
	// NTAG 216       231     4             225

	if ((page < 4) || (page > 225))
	{
		return 0;//Page value out of range
	}

	/* Prepare the first command */
	pn532_packetbuffer[0] = PN532_COMMAND_INDATAEXCHANGE;
	pn532_packetbuffer[1] = 1;                              /* Card number */
	pn532_packetbuffer[2] = MIFARE_ULTRALIGHT_CMD_WRITE;    /* Mifare Ultralight Write command = 0xA2 */
	pn532_packetbuffer[3] = page;                           /* Page Number (0..63 for most cases) */
	memcpy (pn532_packetbuffer+4, data, 4);                 /* Data Payload */

	/* Send the command */
	if (! sendCommandCheckAck(pn532_packetbuffer, 8,1000))
	{
		return 0;//Failed to receive ACK for write comman
	}
	HAL_Delay(10);

	/* Read the response packet */
	readdata(pn532_packetbuffer, 26);

	// Return OK Signal
	return 1;
}

void readdata(uint8_t buff[], uint8_t n)
{
	uint16_t timer = 0;
	HAL_Delay(2);

	HAL_I2C_Master_Receive(hi2cLib, PN532_I2C_ADDRESS<<1, buff, n+2, HAL_MAX_DELAY);
}

void writecommand(uint8_t* cmd, uint8_t cmdlen)
{
	uint8_t checksum;
	uint8_t temp=0;
	cmdlen++;
	HAL_Delay(2) ;    // or whatever the delay is for waking up the board

	checksum = PN532_PREAMBLE + PN532_PREAMBLE + PN532_STARTCODE2;
	writeBuffer[temp]=PN532_PREAMBLE;
	temp++;
	writeBuffer[temp]=PN532_PREAMBLE;
	temp++;
	writeBuffer[temp]=PN532_STARTCODE2;
	temp++;
	writeBuffer[temp]=cmdlen;
	temp++;
	writeBuffer[temp]=~cmdlen+1;
	temp++;
	writeBuffer[temp]=PN532_HOSTTOPN532;
	temp++;

	checksum += PN532_HOSTTOPN532;
	uint8_t i=0;
	for (i=0; i<cmdlen-1; i++)
	{
		writeBuffer[temp]=cmd[i];
		temp++;
		checksum += cmd[i];
	}
	writeBuffer[temp]=~checksum;
	temp++;
	writeBuffer[temp]=PN532_POSTAMBLE;
	temp++;
	WRITE_REGISTER_PN532(writeBuffer,temp);
}

uint8_t isready()
{
	// I2C check if status is ready by IRQ line being pulled low.
	uint8_t x = HAL_GPIO_ReadPin(GPIOA, GPIO_PIN_13); //TODO
	return x == 0;
}

uint8_t waitready(uint16_t timeout)
{
	  uint16_t timer = 0;

	  while(!isready())
	  {
	    if (timeout != 0)
	    {
	      timer += 5;
	      if (timer > timeout)
	      {
	        return 0;
	      }
	    }
	    HAL_Delay(5);
	  }
	  return 1;
}
