==> stiven88c/NFC-Examensarbete/main/lib/pn532.c <==
#include <lib/pn532.h>
#include <stdio.h>
#include <string.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "freertos/event_groups.h"
#include "esp_system.h"
#include "esp_log.h"
#include "esp_err.h"
#include <stdlib.h>
#include "esp_mac.h"
#include "rom/gpio.h"
#define TAG "PN532"
#define ESP_INTR_FLAG_DEFAULT 0
#define PN532_PACKBUFFSIZ 64
#define _BV(bit) (1<<(bit))

void writecommand (uint8_t *cmd, uint8_t cmdlen)
{

  // I2C command write.
  uint8_t checksum;

  //Create the command
  uint8_t *command = malloc (cmdlen + 9);
  bzero (command, cmdlen + 9);

  vTaskDelay (10 / portTICK_PERIOD_MS);
  checksum = PN532_PREAMBLE + PN532_PREAMBLE + PN532_STARTCODE2;

  command[0] = PN532_I2C_ADDRESS;
  command[1] = PN532_PREAMBLE;
  command[2] = PN532_PREAMBLE;
  command[3] = PN532_STARTCODE2;
  command[4] = (cmdlen + 1);
  command[5] = ~(cmdlen + 1) + 1;
  command[6] = PN532_HOSTTOPN532;
  checksum += PN532_HOSTTOPN532;

  uint8_t i = 0;
  for (i = 0; i < cmdlen; i++)
  {
    command[i + 7] = cmd[i];
    checksum += cmd[i];
  }
  command[(cmdlen - 1) + 8] = ~checksum;
  command[(cmdlen - 1) + 9] = PN532_POSTAMBLE;

  //Send the data via I2C
  i2c_cmd_handle_t i2ccmd = i2c_cmd_link_create ();
  i2c_master_start (i2ccmd);
  i2c_master_write_byte (i2ccmd, command[0], true);
  for (i = 1; i < cmdlen + 9; i++)
    i2c_master_write_byte (i2ccmd, command[i], true);
  i2c_master_stop (i2ccmd);

#ifdef CONFIG_PN532DEBUG
  ESP_LOGD(TAG, "%s Sending :", __func__);
  esp_log_buffer_hex(TAG,command,cmdlen+9);
#endif

  esp_err_t result = ESP_OK;
  result = i2c_master_cmd_begin (PN532_I2C_PORT, i2ccmd, I2C_WRITE_TIMEOUT / portTICK_PERIOD_MS);

  if (result != ESP_OK)
  {
    char *resultText = NULL;
    switch (result)
    {
      case ESP_ERR_INVALID_ARG:
	resultText = "Parameter error";
	break;
      case ESP_FAIL:
	resultText = "Sending command error, slave doesn’t ACK the transfer.";
	break;
      case ESP_ERR_INVALID_STATE:
	resultText = "I2C driver not installed or not in master mode.";
	break;
      case ESP_ERR_TIMEOUT:
	resultText = "Operation timeout because the bus is busy. ";
	break;
    }
    ESP_LOGE(TAG, "%s I2C write failed: %s", __func__, resultText);
  }

  i2c_cmd_link_delete (i2ccmd);

  free (command);
}

bool readdata (uint8_t *buff, uint8_t n)
{
  i2c_cmd_handle_t i2ccmd;
  uint8_t *buffer = malloc (n + 3);

  vTaskDelay (10 / portTICK_PERIOD_MS);
  bzero (buffer, n + 3);
  bzero (buff, n);

  i2ccmd = i2c_cmd_link_create ();
  i2c_master_start (i2ccmd);
  i2c_master_write_byte (i2ccmd, PN532_I2C_READ_ADDRESS, true);
  for (uint8_t i = 0; i < (n + 2); i++)
    i2c_master_read_byte (i2ccmd, &buffer[i], I2C_MASTER_ACK);
  i2c_master_read_byte (i2ccmd, &buffer[n + 2], I2C_MASTER_LAST_NACK);
  i2c_master_stop (i2ccmd);

  if (i2c_master_cmd_begin (PN532_I2C_PORT, i2ccmd, I2C_READ_TIMEOUT / portTICK_PERIOD_MS) != ESP_OK)
  {
    //Reset i2c bus
    i2c_cmd_link_delete (i2ccmd);
    free (buffer);
    return false;
  };

  i2c_cmd_link_delete (i2ccmd);

  memcpy (buff, buffer + 1, n);
  // Start read (n+1 to take into account leading 0x01 with I2C)
#ifdef CONFIG_PN532DEBUG
  ESP_LOGD(TAG, "Reading: ");
  esp_log_buffer_hex(TAG,buffer,n+3);
#endif
  free (buffer);

  return true;
}

bool isready ()
{
  // I2C check if status is ready by IRQ line being pulled low.
  uint8_t x = gpio_get_level (IRQ_PIN);
#ifdef CONFIG_IRQDEBUG
  ESP_LOGI(TAG, "IRQ: %d", x);
#endif
  return (x == 0);
}

bool waitready (uint16_t timeout)
{
#ifdef CONFIG_ENABLE_IRQ_ISR

  uint32_t io_num = 0;
  TickType_t delay = 0;
  if (timeout == 0) delay = portMAX_DELAY;
  else delay = timeout / portTICK_PERIOD_MS;

	ESP_LOGE (TAG, "Waiting for IRQ");
  xQueueReceive(IRQQueue, &io_num, delay);
	ESP_LOGE (TAG, "IRQ Recieved");

  return (io_num == IRQ_PIN);
#else
	uint16_t timer = 0;
	while (!isready ())
	{
		if (timeout != 0)
		{
			timer += 10;
			if (timer > timeout)
			{
#ifdef CONFIG_PN532DEBUG
				ESP_LOGE (TAG, "Waitready TIMEOUT after %d ms!",timeout);
#endif
				return false;
			}
		}
		vTaskDelay (10 / portTICK_PERIOD_MS);
	}
	return true;
#endif
}

uint8_t mifareclassic_WriteDataBlock (uint8_t blockNumber, uint8_t *data)
{
#ifdef CONFIG_MIFAREDEBUG
  ESP_LOGD(TAG, "Trying to write 16 bytes to block %d", blockNumber);
#endif

  /* Prepare the first command */
  pn532_packetbuffer[0] = PN532_COMMAND_INDATAEXCHANGE;
  pn532_packetbuffer[1] = 1; /* Card number */
  pn532_packetbuffer[2] = MIFARE_CMD_WRITE; /* Mifare Write command = 0xA0 */
  pn532_packetbuffer[3] = blockNumber; /* Block Number (0..63 for 1K, 0..255 for 4K) */
  memcpy (pn532_packetbuffer + 4, data, 16); /* Data Payload */

  /* Send the command */
  if (!sendCommandCheckAck (pn532_packetbuffer, 20, I2C_WRITE_TIMEOUT))
  {
#ifdef CONFIG_MIFAREDEBUG
    ESP_LOGD(TAG, "Failed to receive ACK for write command");
#endif
    return 0;
  }
  vTaskDelay (10 / portTICK_PERIOD_MS);

  /* Read the response packet */
  readdata (pn532_packetbuffer, 26);

  return 1;
}

uint8_t mifareultralight_WritePage (uint8_t page, uint8_t *data)
{

  if (page >= 64)
  {
#ifdef CONFIG_MIFAREDEBUG
    ESP_LOGD(TAG, "Page value out of range");
#endif
    // Return Failed Signal
    return 0;
  }

#ifdef CONFIG_MIFAREDEBUG
  ESP_LOGD(TAG, "Trying to write 4 byte page %d", page);
#endif

  /* Prepare the first command */
  pn532_packetbuffer[0] = PN532_COMMAND_INDATAEXCHANGE;
  pn532_packetbuffer[1] = 1; /* Card number */
  pn532_packetbuffer[2] = MIFARE_ULTRALIGHT_CMD_WRITE; /* Mifare Ultralight Write command = 0xA2 */
  pn532_packetbuffer[3] = page; /* Page Number (0..63 for most cases) */
  memcpy (pn532_packetbuffer + 4, data, 4); /* Data Payload */

  /* Send the command */
  if (!sendCommandCheckAck (pn532_packetbuffer, 8, I2C_WRITE_TIMEOUT))
  {
#ifdef CONFIG_MIFAREDEBUG
    ESP_LOGD(TAG, "Failed to receive ACK for write command");
#endif

    // Return Failed Signal
    return 0;
  }
  vTaskDelay (10 / portTICK_PERIOD_MS);

  /* Read the response packet */
  readdata (pn532_packetbuffer, 26);

  // Return OK Signal
  return 1;
}

uint8_t ntag2xx_WritePage (uint8_t page, uint8_t *data)
{
  // TAG Type       PAGES   USER START    USER STOP
  // --------       -----   ----------    ---------
  // NTAG 203       42      4             39
  // NTAG 213       45      4             39
  // NTAG 215       135     4             129
  // NTAG 216       231     4             225

  if ((page < 4) || (page > 225))
  {
#ifdef CONFIG_MIFAREDEBUG
    ESP_LOGD(TAG, "Page value out of range");
#endif
    // Return Failed Signal
    return 0;
  }

#ifdef CONFIG_MIFAREDEBUG
  ESP_LOGD(TAG, "Trying to write 4 byte page %d", page);
#endif

  /* Prepare the first command */
  pn532_packetbuffer[0] = PN532_COMMAND_INDATAEXCHANGE;
  pn532_packetbuffer[1] = 1; /* Card number */
  pn532_packetbuffer[2] = MIFARE_ULTRALIGHT_CMD_WRITE; /* Mifare Ultralight Write command = 0xA2 */
  pn532_packetbuffer[3] = page; /* Page Number (0..63 for most cases) */
  memcpy (pn532_packetbuffer + 4, data, 4); /* Data Payload */

  /* Send the command */
  if (!sendCommandCheckAck (pn532_packetbuffer, 8, I2C_WRITE_TIMEOUT))
  {
#ifdef CONFIG_MIFAREDEBUG
    ESP_LOGD(TAG, "Failed to receive ACK for write command");
#endif

    // Return Failed Signal
    return 0;
  }
  vTaskDelay (10 / portTICK_PERIOD_MS);

  /* Read the response packet */
  readdata (pn532_packetbuffer, 26);

  // Return OK Signal
  return 1;
}
